# mxr-voiceprint-recognition-pytorch

./: .dockerignore  .gitignore  Dockerfile  README.md  README_en.md  dockerfile  eval.py  infer.py  infer_contrast.py  infer_contrast_gui.py  infer_recognition.py  infer_recognition_gui.py  infer_speaker_diarization.py  infer_speaker_diarization_gui.py  main.py  paper.md  pyproject.toml  requirements.txt  run.sh  setup.py
configs/: cam++.yml  eres2net.yml
core/: auto_import.py  config.py  gobal_exception.py  logger.py  middleware_access_log.py  middleware_auth.py  middleware_request_id.py  response.py
mvector/: embedding_intent_recognizer.py  predict.py  swallow_predictor.py  trainer.py
mvector/infer_utils/: speaker_diarization.py
mvector/utils/: audio_utils.py  checkpoint.py  utils.py
routers/: index.py  index_router.py  intent.py  model.py  model_router.py  swallow.py  voiceprint.py
services/: __init__.py  base.py  intent_service.py  swallow_service.py  swollow_service.py  voiceprint_service.py
static/: index.html
tools/: benchmark_predictor.py
