[project]
name = "voiceprintrecognition-pytorch"
version = "0.1.0"
description = "A voiceprint recognition system based on PyTorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.123.9",
    "install>=1.3.5",
    "loguru>=0.7.2",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "pyyaml>=5.4.1",
    "resampy>=0.2.2",
    "scikit-learn>=1.5.2",
    "soundcard>=0.4.2",
    "soundfile>=0.12.1",
    "torchinfo>=1.7.2",
    "tqdm>=4.59.0",
    "uvicorn[standard]>=0.38.0",
    "visualdl==2.5.3",
    "yeaudio>=0.0.7",
]


[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
