[project]
name = "voiceprintrecognition-pytorch"
version = "0.1.0"
description = "A voiceprint recognition system based on PyTorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.123.9",
    "install>=1.3.5",
    "librosa>=0.11.0",
    "loguru>=0.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.20",
    "resampy>=0.4.2",
    "numba>=0.57.0",
    "llvmlite>=0.41.0",
    "pyyaml>=5.4.1",
    "scikit-learn>=1.5.2",
    "soundcard>=0.4.2",
    "soundfile>=0.12.1",
    "torchinfo>=1.7.2",
    "tqdm>=4.59.0",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
    "visualdl==2.5.3",
    "yeaudio>=0.0.7",
]


# 指定 extra 依赖
[project.optional-dependencies]
cpu = [
  "torch==2.9.0+cpu",
  "torchvision==0.24.0+cpu",
  "torchaudio==2.9.0+cpu",
  "transformers>=4.57.3",
]
cu128 = [
  "torch==2.9.0+cu128",
  "torchvision==0.24.0+cu128",
  "torchaudio==2.9.0+cu128",
  "transformers[torch]>=4.57.3",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]


# 指定源
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

# 官方 PyPI 镜像（默认国内源可选）
[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

# PyTorch 官方 CPU wheel
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

# PyTorch 官方 GPU wheel
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
