[project]
name = "voiceprintrecognition-pytorch"
version = "0.1.0"
description = "A voiceprint recognition system based on PyTorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.123.9",
    "install>=1.3.5",
    "librosa>=0.11.0",
    "loguru>=0.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.20",
    "resampy>=0.4.2",
    "numba>=0.57.0",
    "llvmlite>=0.41.0",
    "pyyaml>=5.4.1",
    "scikit-learn>=1.5.2",
    "soundcard>=0.4.2",
    "soundfile>=0.12.1",
    "torchinfo>=1.7.2",
    "tqdm>=4.59.0",
    "uvicorn[standard]>=0.38.0",
    "visualdl==2.5.3",
    "yeaudio>=0.0.7",
    "setuptools>=80.9.0",
]


# 指定 extra 依赖
[project.optional-dependencies]
cpu = [
  "torch==2.9.1+cpu",
  "torchvision==0.24.1+cpu",
  "torchaudio==2.9.1+cpu",
]
cu128 = [
  "torch==2.9.1+cu128",
  "torchvision==0.24.1+cu128",
  "torchaudio==2.9.1+cu128",
]
# 兼容5080+
cu130 = [
  "torch==2.9.1+cu130",
  "torchvision==0.24.1+cu130",
  "torchaudio==2.9.1+cu130",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]


# 指定源
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

# 官方 PyPI 镜像（默认国内源可选）
[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

# PyTorch 官方 CPU wheel
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

# PyTorch 官方 GPU wheel
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"
explicit = true
